--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>ประกาศรายชื่อผู้มีสิทธิ์เข้าสัมภาษณ์</title>
+    <title>Once A Native</title>
   </head>
   <body>
     <noscript>
